src/objects/Custom_Services__c.object
<CustomObject>
    <description>This custom object is created to capture GSS related information.</description>
    <fields>
        <fullName>Account_Owner_Sub_Region__c</fullName>
        <formula>Text(Opportunity__r.Account.Owner.Sub_Region__c)</formula>
        <label>Account Owner Sub Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Opportunity__r.Account.Owner.FirstName + &apos; &apos;+ Opportunity__r.Account.Owner.LastName</formula>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CapEx_Required__c</fullName>
        <label>CapEx Required?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Custom_Solutions_and_Services_ID_18Char__c</fullName>
        <formula>casesafeid(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Custom Solutions and Services ID 18Char</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Estimated_Service_Close_Date__c</fullName>
        <label>Estimated Service Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hardware_Pullthrough__c</fullName>
        <description>Total price of the SKU hardware products(non service) added</description>
        <formula>Opportunity__r.Hardware_Pullthrough__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Value of Hardware bookings from Opportunity</inlineHelpText>
        <label>Hardware Pullthrough</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hardware_pull_through_EVM__c</fullName>
        <description>MSI Hardware pull through</description>
        <label>Hardware pull through (EVM)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Integraton_Services_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Integraton Services Value</description>
        <label>SI Services Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IsConverted_EVM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Data is from MSI if IsConverted(EVM) is true</description>
        <label>IsConverted(EVM)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Log_Credit_Value__c</fullName>
        <inlineHelpText>The expected amount of the total order that Sales will receive credit for in the first 12 months. This amount is dependent on whether the opportunity is considered funded or unfunded and the length of the contract.</inlineHelpText>
        <label>Log Credit Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MS_Contract_Term_Months__c</fullName>
        <description>Manager Services Contract Term in months</description>
        <label>MS Contract Term (Months)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MS_Offering__c</fullName>
        <description>Manager services offering</description>
        <label>MS Offering</label>
        <picklist>
            <picklistValues>
                <fullName>Operational Visibility Service (OVS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premier Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Visibility Service (AVS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed WLAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WLAN Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WLAN Monitoring Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>MS_Service_Start_Date__c</fullName>
        <description>Manager Service Start Date</description>
        <label>MS Service Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Managed_Services_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Manager Services Value</description>
        <label>MS Services Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Next_Step__c</fullName>
        <label>Next Step</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Custom Services</relationshipLabel>
        <relationshipName>Custom_Solutions_and_Services</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PS_Contract_Term_Months__c</fullName>
        <description>Professional Services contract term in months</description>
        <label>PS Contract Term (Months)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PS_Offering__c</fullName>
        <description>Professional Services Offering</description>
        <label>PS Offering</label>
        <picklist>
            <picklistValues>
                <fullName>Mobility Consultancy (Strategy, Design)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netwrk Design &amp; Assessment (Data, Voice)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netwrk Security Consultancy &amp; Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software Application Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobility Management Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operational Pilot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learning Services (End User, Technical)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>PS_Service_Start_Date__c</fullName>
        <description>Professional Service Start Date</description>
        <label>PS Service Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Potential_CAPEX_Value__c</fullName>
        <label>Potential CAPEX Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Professional_Services_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Professional Services Value</description>
        <label>PS Services Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SI_Contract_Term_Months__c</fullName>
        <description>Integration Services contract term in months</description>
        <label>SI Contract Term (Months)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SI_Offering__c</fullName>
        <description>Integration Services Offering</description>
        <label>SI Offering</label>
        <picklist>
            <picklistValues>
                <fullName>Project Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pilot and Test Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployment and Commissioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing and Acceptance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Commisioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staging, Kitting, Deployment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SI_Service_Start_Date__c</fullName>
        <description>Integration Service Start Date</description>
        <label>SI Service Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SS_Contract_Term_Months__c</fullName>
        <description>Support Services contract term in months</description>
        <label>SS Contract Term (Months)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SS_Offering__c</fullName>
        <description>Support services offering</description>
        <label>SS Offering</label>
        <picklist>
            <picklistValues>
                <fullName>Onsite Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Depot Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW-only Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staging and Kitting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SS_Service_Start_Date__c</fullName>
        <description>Support Service Start Date</description>
        <label>SS Service Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Product_Pullthrough__c</fullName>
        <description>Sum of total price of SKU service products</description>
        <formula>Opportunity__r.Service__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Value of Standard SKUd Service Bookings from Opportunity</inlineHelpText>
        <label>Standard Service Pullthrough</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Stage__c</fullName>
        <label>Service Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Identify</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Qualify</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Validate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Duplicate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Support_Services_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Support Services Value</description>
        <label>SS Services Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Contract_Value__c</fullName>
        <description>Autosum of &quot;Hardware Pullthrough&quot;, &quot;Service Product Pullthrough&quot; and &quot;Total Service Value&quot;</description>
        <formula>Hardware_Pullthrough__c  +  Service_Product_Pullthrough__c  +  Total_Service_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total value of contract (all hardware and service offered)</inlineHelpText>
        <label>Total Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Service_Value_EVM__c</fullName>
        <description>MSI Total Service Value</description>
        <label>Total Service Value (EVM)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Service_Value__c</fullName>
        <description>Autosum of fields: Professional Services Value,  Integration Services Value, Support Service Value, Managed Services Value</description>
        <formula>IF( ISNULL((Professional_Services_Value__c  +  Integraton_Services_Value__c  +  Support_Services_Value__c  +  Managed_Services_Value__c)),IF(IsConverted_EVM__c = true, Hardware_pull_through_EVM__c ,(Professional_Services_Value__c  +  Integraton_Services_Value__c  +  Support_Services_Value__c  +  Managed_Services_Value__c)),(Professional_Services_Value__c  +  Integraton_Services_Value__c  +  Support_Services_Value__c  +  Managed_Services_Value__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Value of Custom Service Bookings from the Services sections below</inlineHelpText>
        <label>Total Custom Service Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Weekly_activites_to_progress_opportunity__c</fullName>
        <label>Weekly activites to progress opportunity</label>
        <type>TextArea</type>
    </fields>
    <label>Custom Services</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Solution Sales Team Opportunity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Services</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>MS_Contract_Term_is_Mandatory</fullName>
        <active>true</active>
        <description>Manager Services contract term is Mandatory if Managed Services Value is Entered &lt;&gt;0</description>
        <errorConditionFormula>NOT(ISNULL(   Managed_Services_Value__c ))&amp;&amp; Managed_Services_Value__c &lt;&gt; 0 &amp;&amp;   ISPICKVAL(MS_Contract_Term_Months__c, &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>MS_Contract_Term_Months__c</errorDisplayField>
        <errorMessage>Please enter a value for MS Contract  Term</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MS_Offering_is_Mandatory</fullName>
        <active>true</active>
        <description>Manager services offering is Mandatory if Managed Services Value is Entered &lt;&gt;0</description>
        <errorConditionFormula>NOT(ISNULL(   Managed_Services_Value__c ))&amp;&amp; Managed_Services_Value__c &lt;&gt; 0 &amp;&amp; ISNULL( MS_Offering__c )</errorConditionFormula>
        <errorDisplayField>MS_Offering__c</errorDisplayField>
        <errorMessage>Please enter a value for MS Offering</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MS_Service_Start_Date_is_Mandatory</fullName>
        <active>true</active>
        <description>Manager Service start date is Mandatory if Managed Services Value is Entered &lt;&gt;0</description>
        <errorConditionFormula>NOT(ISNULL(   Managed_Services_Value__c ))&amp;&amp; Managed_Services_Value__c &lt;&gt; 0 &amp;&amp; ISNULL( MS_Service_Start_Date__c)</errorConditionFormula>
        <errorDisplayField>MS_Service_Start_Date__c</errorDisplayField>
        <errorMessage>Please enter a value for MS Service Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PS_Contract_Term_is_Mandatory</fullName>
        <active>true</active>
        <description>Professional services contract term is Mandatory if Professional Services Value is Entered and &lt;&gt; 0</description>
        <errorConditionFormula>NOT(ISNULL(Professional_Services_Value__c))&amp;&amp; Professional_Services_Value__c &lt;&gt; 0 &amp;&amp;  ISPICKVAL( PS_Contract_Term_Months__c,&apos;&apos; )</errorConditionFormula>
        <errorDisplayField>PS_Contract_Term_Months__c</errorDisplayField>
        <errorMessage>Please enter a value for PS Contract Term (Months)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PS_Offering_Is_Mandatory</fullName>
        <active>true</active>
        <description>Professional services offering is Mandatory if Professional Services Value is Entered and &lt;&gt; 0</description>
        <errorConditionFormula>NOT(ISNULL(Professional_Services_Value__c))&amp;&amp; Professional_Services_Value__c  &lt;&gt; 0 &amp;&amp;  ISNULL(PS_Offering__c)</errorConditionFormula>
        <errorDisplayField>PS_Offering__c</errorDisplayField>
        <errorMessage>Please enter a value for PS Offering</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PS_Service_Start_Date_Mandatory</fullName>
        <active>true</active>
        <description>Professional Service Start Date is Mandatory if Professional Services Value is Entered and &lt;&gt; 0</description>
        <errorConditionFormula>NOT(ISNULL(Professional_Services_Value__c))&amp;&amp; Professional_Services_Value__c &lt;&gt; 0 &amp;&amp;  ISNULL(PS_Service_Start_Date__c)</errorConditionFormula>
        <errorDisplayField>PS_Service_Start_Date__c</errorDisplayField>
        <errorMessage>Please enter a value for PS Service Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SI_Contract_Term_is_Mandatory</fullName>
        <active>true</active>
        <description>Integration service contract term is Mandatory if Integration Services Value is Entered</description>
        <errorConditionFormula>NOT(ISNULL( Integraton_Services_Value__c ))&amp;&amp; Integraton_Services_Value__c &lt;&gt; 0 &amp;&amp;    ISPICKVAL(SI_Contract_Term_Months__c, &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>SI_Contract_Term_Months__c</errorDisplayField>
        <errorMessage>Please enter a value for SI Contract Term (Months)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SI_Offering_is_Mandatory</fullName>
        <active>true</active>
        <description>Integration services Offering is Mandatory if Integration Services Value is Entered and &lt;&gt;0</description>
        <errorConditionFormula>NOT(ISNULL( Integraton_Services_Value__c ))&amp;&amp; Integraton_Services_Value__c &lt;&gt; 0 &amp;&amp; ISNULL(SI_Offering__c)</errorConditionFormula>
        <errorDisplayField>SI_Offering__c</errorDisplayField>
        <errorMessage>Please enter a value for SI Offering</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SI_Service_Start_Date_is_Mandatory</fullName>
        <active>true</active>
        <description>Integration Service Start Date is Mandatory if Integration Services Value is Entered</description>
        <errorConditionFormula>NOT(ISNULL( Integraton_Services_Value__c ))&amp;&amp; Integraton_Services_Value__c &lt;&gt; 0 &amp;&amp;  ISNULL(SI_Service_Start_Date__c)</errorConditionFormula>
        <errorDisplayField>SI_Service_Start_Date__c</errorDisplayField>
        <errorMessage>Please enter a value for SI Service Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SS_Contract_Term_is_Mandatory</fullName>
        <active>true</active>
        <description>Support Service contract term is Mandatory if Support Services Value is Entered and &lt;&gt;0</description>
        <errorConditionFormula>NOT(ISNULL(  Support_Services_Value__c ))&amp;&amp; Support_Services_Value__c &lt;&gt; 0 &amp;&amp;  ISPICKVAL( SS_Contract_Term_Months__c , &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>SS_Contract_Term_Months__c</errorDisplayField>
        <errorMessage>Please enter a value for SS Contract Term(Months)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SS_Offering_is_Mandatory</fullName>
        <active>true</active>
        <description>Support services offering is Mandatory if Support Services Value is Entered and &lt;&gt;0</description>
        <errorConditionFormula>NOT(ISNULL(  Support_Services_Value__c ))&amp;&amp; Support_Services_Value__c &lt;&gt; 0 &amp;&amp; ISNULL( SS_Offering__c )</errorConditionFormula>
        <errorDisplayField>SS_Offering__c</errorDisplayField>
        <errorMessage>Please enter a value for SS Offering</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SS_Service_Start_Date_is_Mandatory</fullName>
        <active>true</active>
        <description>Support Service Start date is Mandatory if Support Services Value is Entered and &lt;&gt;0</description>
        <errorConditionFormula>NOT(ISNULL(  Support_Services_Value__c ))&amp;&amp; Support_Services_Value__c &lt;&gt; 0 &amp;&amp;  ISNULL(SS_Service_Start_Date__c)</errorConditionFormula>
        <errorDisplayField>SS_Service_Start_Date__c</errorDisplayField>
        <errorMessage>Please enter a value for SS Service Start Date</errorMessage>
    </validationRules>
</CustomObject>